--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "mongoose": "^8.20.0",
-    "redis": "^5.9.0"
+    "redis": "^5.9.0",
+    "uuid": "^13.0.0"
   }
 }
